# boot-protector

./: .gitignore  README.md  boot-protector-2-with-holes.py  boot-protector-core.ply  boot.ply  boot2.ply  boot3.ply  boot4.ply  boot5.ply  boot6.ply  main.py  plymcout.d.ply  plymcout.ply  pyproject.toml  requirements.txt
.github/workflows/: main.yml
other-attempts/first-mix-of-tools/: boot-0-simplified.stl  boot-0.stl  boot-protector-1-core-simpl-2.stl  boot-protector-2-with-holes.stl
other-attempts/second-only-blender/: full-blender-workflow.3mf
previous-attempts/first-mix-of-tools/: boot-protector-1-core-simpl.stl  boot-protector-1-core.ply  boot-protector-1-core.stl  boot-protector-2-with-holes.py
