[tool.poetry]
name = "boot"
version = "0.1.0"
description = ""
authors = ["Yeicor <4929005+Yeicor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
build123d = {git = "https://github.com/gumyr/build123d"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

